- extensions
  - proxyengine is temporarily removed, pending an actually working
    replacement.
  - SelectResults has been replaced by Query.  SelectResults / 
    SelectResultsExt still exist but just return a slightly modified
    Query object for backwards-compatibility.  join_to() method 
    from SelectResults isn't present anymore, need to use join(). 
    
0.3.9
- general
    - better error message for NoSuchColumnError [ticket:607]
    - finally figured out how to get setuptools version in, available
      as sqlalchemy.__version__ [ticket:428]
- ext
    - iteration over dict association proxies is now dict-like, not
      InstrumentedList-like (e.g. over keys instead of values)
    - association proxies no longer bind tightly to source collections
      [ticket:597], and are constructed with a thunk instead
- orm
    - forwards-compatibility with 0.4: added one(), first(), and 
      all() to Query
    - added synchronization to the mapper() construction step, to avoid
      thread collections when pre-existing mappers are compiling in a 
      different thread [ticket:613]
    - fixed very stupid bug when deleting items with many-to-many
      uselist=False relations
    - remember all that stuff about polymorphic_union ?  for 
      joined table inheritance ?  Funny thing...
      You sort of don't need it for joined table inheritance, you 
      can just string all the tables together via outerjoin().
      The UNION still applies if concrete tables are involved, 
      though (since nothing to join them on).
    - small fix to eager loading to better work with eager loads
      to polymorphic mappers that are using a straight "outerjoin"
      clause
- sql
    - MetaData and all SchemaItems are safe to use with pickle.  slow
      table reflections can be dumped into a pickled file to be reused later.
      Just reconnect the engine to the metadata after unpickling. [ticket:619]