@@ -107,7 +107,8 @@
     SelectResultsExt still exist but just return a slightly modified
     Query object for backwards-compatibility.  join_to() method 
     from SelectResults isn't present anymore, need to use join(). 
-    
+- postgres
+  - Added PGArray datatype for using postgres array datatypes
 0.3.9
 - general
     - better error message for NoSuchColumnError [ticket:607]
